run release job on certain tags

--- a/release.yml
+++ b/release.yml
@@ -111,6 +111,10 @@ jobs:
         path: ${{ github.workspace }}/bin
   publish:
     needs: test
+    "on":
+      push:
+        tags:
+        - v*.[0-99]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
