--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "no-continue": 0,
     "lines-between-class-members": "off",
+    "template-curly-spacing": ["error", "never"],
     "prefer-const": ["error", {"destructuring": "all"}],
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": "off",
