--- a/prerelease.yml
+++ b/prerelease.yml
@@ -109,6 +109,33 @@ jobs:
       with:
         name: pulumi-${{ env.PROVIDER }}
         path: ${{ github.workspace }}/bin
+  publish:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-region: us-east-2
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        role-duration-seconds: 3600
+        role-external-id: upload-pulumi-release
+        role-session-name: ${{ env.PROVIDER}}@githubActions
+        role-to-assume: ${{ secrets.AWS_UPLOAD_ROLE_ARN }}
+    - name: Setup Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.13.x
+    - env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      name: Run GoReleaser
+      uses: goreleaser/goreleaser-action@v2
+      with:
+        args: release --rm-dist --config=.goreleaser.prelease.yml
+        version: latest
   test:
     name: test
     needs: build_sdk
@@ -182,8 +209,8 @@ jobs:
         - nodejs
         - python
         - dotnet
-name: pull-request
+name: prerelease
 "on":
-  pull_request:
-    branches:
-    - master
+  push:
+    tags:
+    - v*.*.*-**
